--- a/client/src/scss/indicator.scss
+++ b/client/src/scss/indicator.scss
@@ -34,7 +34,7 @@
 		justify-content: space-between;
 		align-items: center;
 		position: relative;
-		z-index: 20;
+		z-index: 11;
 	}
 	.bloc-img {
 		width: 70px;
